[package]
name = "bevy_replicon_renet2"
version = "0.1.2"
authors = [
  "Hennadii Chernyshchyk <genaloner@gmail.com>",
  "koe <ukoe@protonmail.com>",
]
edition = "2021"
description = "Integration with renet2 for bevy_replicon"
keywords = [
  "bevy",
  "multiplayer",
  "netcode",
  "replication",
  "server-authoritative",
]
license = "MIT OR Apache-2.0"
repository = "https://github.com/UkoeHB/renet2"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["-Zunstable-options", "--cfg", "docsrs"]

[dependencies]
bevy_replicon = { version = "0.29", default-features = false }
bevy_renet2 = { path = "../bevy_renet2", version = "0.1.2", default-features = false }
bevy = { version = "0.15", default-features = false }

rustls = { version = "0.23", optional = true }
rustls-pki-types = { version = "1.7", optional = true }
serde = { version = "1.0", optional = true }
serde_with = { version = "1.0", optional = true }

[dev-dependencies]
serde = "1.0"
clap = { version = "4.1", features = ["derive"] }
bevy_renet2 = { path = "../bevy_renet2", version = "0.1.2", features = ["native_transport"] }
bevy = { version = "0.15", default-features = false, features = [
  "bevy_state",
  "bevy_text",
  "bevy_ui",
  "bevy_window",
  "bevy_gizmos",
  "x11",
  "default_font",
] }
log = "0.4"
tracing-subscriber = { version = "0.3", features = [ "env-filter", "std", "tracing-log" ] }

[features]
default = ["renet_serde", "netcode", "client", "server"]

# Re-exports of bevy_replicon features
client = ["bevy_replicon/client"]
server = ["bevy_replicon/server"]

# Re-exports of renet features
renet_serde = ["bevy_renet2/serde"]
netcode = ["bevy_renet2/netcode"]
native_transport = ["netcode", "bevy_renet2/native_transport"]
memory_transport = ["netcode", "bevy_renet2/memory_transport"]
wt_server_transport = ["netcode", "bevy_renet2/wt_server_transport"]
wt_client_transport = ["netcode", "bevy_renet2/wt_client_transport"]
ws_server_transport = ["netcode", "bevy_renet2/ws_server_transport"]
ws_client_transport = ["netcode", "bevy_renet2/ws_client_transport"]
ws-rustls = ["bevy_renet2/ws-rustls"]
ws-native-tls = ["bevy_renet2/ws-native-tls"]

# Enables advanced setup features.
#
# If using the ws_server_transport feature, then ws_certs is also required.
advanced_setup = ["dep:serde", "dep:serde_with", "renet_serde", "netcode"]
# Advanced setup with all features enabled for clients.
advanced_setup_client_full = [
  "advanced_setup",
  "memory_transport",
  "native_transport",
  "wt_client_transport",
  "ws_client_transport"
]
# Advanced setup with all features enabled for servers.
advanced_setup_server_full = [
  "advanced_setup",
  "memory_transport",
  "native_transport",
  "wt_server_transport",
  "ws_server_transport",
  "ws_certs"
]

# Enables extracting websocket certs from file using rustls. See GameServerSetupConfig.
ws_certs = ["ws-rustls", "dep:rustls", "dep:rustls-pki-types"]

[[test]]
name = "transport"
required-features = ["native_transport", "client", "server"]
