[package]
name = "demo_bevy"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[features]
netcode = ["bevy_renet2/netcode"]
steam = ["bevy_renet2/steam"]

[dependencies]
bevy = { version = "0.17", default-features = true }
bevy_renet2 = { path = "../bevy_renet2", default-features = false }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
bevy_egui = "0.38"
renet2_visualizer = { path = "../renet2_visualizer", features = ["bevy"] }
fastrand = "2.0"
steamworks = { version = "0.11", optional = true }
