[package]
name = "echo_server_cross"
version = "0.1.0"
edition = "2021"
description = "Server example transport for WebTransport"
publish = false

[dependencies]
env_logger = "0.11"
log = "0.4"
tokio = { version = "1", features = ["full"] }
url = "2.4"
warp = "0.3"

renet2 = { path = "../../renet2", default-features = false }
renet2_netcode = { path = "../../renet2_netcode", default-features = false, features = [
  "serde",
  "native_transport",
  "wt_server_transport",
  "ws_server_transport",
] }
renetcode2 = { path = "../../renetcode2" }
